--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/socialradar/geohash-helper"
   },
-  "main": "lib/batch-helper.js",
+  "main": "lib/helper.js",
   "scripts": {
     "test": "grunt test"
   },
